fix($client): Ensure icons have z-index

--- a/src/components/elements/icon/icon.scss
+++ b/src/components/elements/icon/icon.scss
@@ -20,4 +20,9 @@ span {
   margin-right: .5rem;
 }
 
+i,
+b-icon {
+  z-index: 2
+}
+
 @import '../../../client/scss/reboot';
